feat: update service registration to new schema with replica grouping
- Add Docker Compose label support (com.docker.compose.service) with priority over Swarm labels
- Refactor ServiceDiscoveryServiceImpl to group containers by service name
- Build ServiceRegistrationServiceDTO with replicas array instead of flat service list
- Each replica includes containerId, containerName, machineId, and startedAt timestamp
- Services and hosts are now separate top-level arrays in registration payload
- Add logging configuration to prevent verbose DTO dumps in logs
- Update all tests to match new schema structure
- Add tests for Compose label, Swarm label, standalone fallback, and replica grouping

Closes #41